add links to datasets

--- a/content/basic_linear_regression/data_prep.ipynb
+++ b/content/basic_linear_regression/data_prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4    Denmark    5029              13.5    Europe  no"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>105 rows × 5 columns</p>\n",
+       "<p>101 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -421,10 +421,10 @@
        "103           Yemen      77              50.0      Asia  no\n",
        "104           Zaire     118             104.0    Africa  no\n",
        "\n",
-       "[105 rows x 5 columns]"
+       "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -839,22 +839,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10.015182459015683, -0.9811044324011452)"
+       "(7.14582359796337, -0.5117942628130397)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpha_hat, beta_hat = fit_line(log_infant_mortality, log_income)\n",
+    "alpha_hat, beta_hat = fit_line(log_income, log_infant_mortality)\n",
     "alpha_hat, beta_hat"
    ]
   },
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,17 +1192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "out = out[[\"height\", \"weight\"]]\n",
-    "out.to_csv(\"height_weight.csv\")"
+    "out.to_csv(\"datasets/height_weight.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
