add hypothesis testing section

--- a/content/basic_linear_regression/data_prep.ipynb
+++ b/content/basic_linear_regression/data_prep.ipynb
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2769,7 +2769,7 @@
        "4  2.094       0.827    0.860      0      0  1.886  5.390"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2944,6 +2944,380 @@
     "    zz = np.linspace(beta_hat[j]-3*sigma2_j, beta_hat[j]+3*sigma2_j, 100)\n",
     "    plt.plot(zz, normal_pdf(zz, ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.577</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.574</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   205.0</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Thu, 29 Sep 2022</td> <th>  Prob (F-statistic):</th> <td>1.33e-164</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>23:09:44</td>     <th>  Log-Likelihood:    </th> <td> -1238.0</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   908</td>      <th>  AIC:               </th> <td>   2490.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   901</td>      <th>  BIC:               </th> <td>   2524.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     6</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th> <td>    2.1746</td> <td>    0.181</td> <td>   12.000</td> <td> 0.000</td> <td>    1.819</td> <td>    2.530</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x1</th>    <td>    0.3856</td> <td>    0.061</td> <td>    6.333</td> <td> 0.000</td> <td>    0.266</td> <td>    0.505</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x2</th>    <td>    1.2556</td> <td>    0.087</td> <td>   14.430</td> <td> 0.000</td> <td>    1.085</td> <td>    1.426</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x3</th>    <td>   -0.7464</td> <td>    0.101</td> <td>   -7.365</td> <td> 0.000</td> <td>   -0.945</td> <td>   -0.548</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x4</th>    <td>    0.4136</td> <td>    0.054</td> <td>    7.644</td> <td> 0.000</td> <td>    0.307</td> <td>    0.520</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x5</th>    <td>    0.0643</td> <td>    0.041</td> <td>    1.583</td> <td> 0.114</td> <td>   -0.015</td> <td>    0.144</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x6</th>    <td>    0.3901</td> <td>    0.034</td> <td>   11.555</td> <td> 0.000</td> <td>    0.324</td> <td>    0.456</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>100.278</td> <th>  Durbin-Watson:     </th> <td>   1.979</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td> 379.239</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.468</td>  <th>  Prob(JB):          </th> <td>4.46e-83</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 6.024</td>  <th>  Cond. No.          </th> <td>    25.9</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.577\n",
+       "Model:                            OLS   Adj. R-squared:                  0.574\n",
+       "Method:                 Least Squares   F-statistic:                     205.0\n",
+       "Date:                Thu, 29 Sep 2022   Prob (F-statistic):          1.33e-164\n",
+       "Time:                        23:09:44   Log-Likelihood:                -1238.0\n",
+       "No. Observations:                 908   AIC:                             2490.\n",
+       "Df Residuals:                     901   BIC:                             2524.\n",
+       "Df Model:                           6                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const          2.1746      0.181     12.000      0.000       1.819       2.530\n",
+       "x1             0.3856      0.061      6.333      0.000       0.266       0.505\n",
+       "x2             1.2556      0.087     14.430      0.000       1.085       1.426\n",
+       "x3            -0.7464      0.101     -7.365      0.000      -0.945      -0.548\n",
+       "x4             0.4136      0.054      7.644      0.000       0.307       0.520\n",
+       "x5             0.0643      0.041      1.583      0.114      -0.015       0.144\n",
+       "x6             0.3901      0.034     11.555      0.000       0.324       0.456\n",
+       "==============================================================================\n",
+       "Omnibus:                      100.278   Durbin-Watson:                   1.979\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              379.239\n",
+       "Skew:                           0.468   Prob(JB):                     4.46e-83\n",
+       "Kurtosis:                       6.024   Cond. No.                         25.9\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "results = sm.OLS(y, X).fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.17456016,  0.38562621,  1.25562193, -0.74641356,  0.41355009,\n",
+       "        0.06433409,  0.39005251])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XTX = np.dot(X.T, X)\n",
+    "XTX_inv = np.linalg.inv(XTX)\n",
+    "beta_hat = np.dot(XTX_inv, np.dot(X.T, y))\n",
+    "beta_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.999849483001167, 6.332941663429569, 14.429824935264014, -7.364942208856186, 7.64350660082139, 1.5830826156649147, 11.554631959310726]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_hat = np.dot(X, beta_hat)\n",
+    "sigma2_hat = 1./(X.shape[0]-X.shape[1])*np.sum((y-y_hat)**2)\n",
+    "\n",
+    "cols = [\"intercept\"] + cols\n",
+    "t_stats = []\n",
+    "for j in range(X.shape[1]):\n",
+    "    sigma2_hat_j = sigma2_hat*XTX_inv[j,j]\n",
+    "    t_stat_j = beta_hat[j]/np.sqrt(sigma2_hat_j)\n",
+    "    t_stats.append(t_stat_j)\n",
+    "    \n",
+    "print(t_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 3.7913205908068903e-10,\n",
+       " 0.0,\n",
+       " 3.999023334699814e-13,\n",
+       " 5.395683899678261e-14,\n",
+       " 0.11375356116631785,\n",
+       " 0.0]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import t\n",
+    "p_vals = []\n",
+    "t_dist = t(df=(X.shape[0]-X.shape[1]))\n",
+    "\n",
+    "for j in range(X.shape[1]):\n",
+    "    p_val_j = 2*(1-t_dist.cdf(np.abs(t_stats[j])))\n",
+    "    p_vals.append(p_val_j)\n",
+    "\n",
+    "p_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>coefficient</th>\n",
+       "      <th>t-stat</th>\n",
+       "      <th>p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>intercept</td>\n",
+       "      <td>2.174560</td>\n",
+       "      <td>11.999849</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CIC0</td>\n",
+       "      <td>0.385626</td>\n",
+       "      <td>6.332942</td>\n",
+       "      <td>3.791321e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SM1_Dz(Z)</td>\n",
+       "      <td>1.255622</td>\n",
+       "      <td>14.429825</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GATS1i</td>\n",
+       "      <td>-0.746414</td>\n",
+       "      <td>-7.364942</td>\n",
+       "      <td>3.999023e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NdsCH</td>\n",
+       "      <td>0.413550</td>\n",
+       "      <td>7.643507</td>\n",
+       "      <td>5.395684e-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NdssC</td>\n",
+       "      <td>0.064334</td>\n",
+       "      <td>1.583083</td>\n",
+       "      <td>1.137536e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MLOGP</td>\n",
+       "      <td>0.390053</td>\n",
+       "      <td>11.554632</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     variable  coefficient     t-stat       p-value\n",
+       "0   intercept     2.174560  11.999849  0.000000e+00\n",
+       "1       CIC0      0.385626   6.332942  3.791321e-10\n",
+       "2  SM1_Dz(Z)      1.255622  14.429825  0.000000e+00\n",
+       "3     GATS1i     -0.746414  -7.364942  3.999023e-13\n",
+       "4       NdsCH     0.413550   7.643507  5.395684e-14\n",
+       "5       NdssC     0.064334   1.583083  1.137536e-01\n",
+       "6       MLOGP     0.390053  11.554632  0.000000e+00"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression_outputs = pd.DataFrame({\"variable\": cols, \"coefficient\": beta_hat, \"t-stat\": t_stats, \"p-value\": p_vals})\n",
+    "regression_outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "204.9746012507883"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_bar = np.mean(y)\n",
+    "\n",
+    "regss = np.sum((y_hat - y_bar)**2)\n",
+    "rss = np.sum((y-y_hat)**2)\n",
+    "F_hat = (regss/(X.shape[1]-1))/(rss/(X.shape[0]-X.shape[1]))\n",
+    "F_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1102230246251565e-16"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import f\n",
+    "\n",
+    "f_dist = f(dfn=(X.shape[1]-1), dfd=(X.shape[0]-X.shape[1]))\n",
+    "p_val = (1-f_dist.cdf(F_hat))\n",
+    "p_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
